<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity"
    android:id="@+id/drawer"
    tools:openDrawer="start"
    >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar1"
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:background="@color/background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <ImageView
                    android:id="@+id/imageView30"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.086"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/fake_call" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.Toolbar>

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/coordinatorLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">


                <com.google.android.material.bottomnavigation.BottomNavigationView
                    android:id="@+id/btm_navi"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#393939"
                    app:itemIconTint="@color/textcolor"
                    app:itemTextColor="@color/textcolor"
                    app:menu="@menu/btm_nav_bar"


                    />



        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout15"
            android:layout_width="321dp"
            android:layout_height="66dp"
            android:background="@drawable/bg_new"
            android:layout_marginStart="51dp"
            android:layout_marginTop="73dp"
            android:layout_marginEnd="39dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar1">

            <ImageView
                android:id="@+id/imageView29"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/call2" />

            <LinearLayout
                android:layout_width="223dp"
                android:layout_height="40dp"
                android:layout_marginStart="18dp"

                android:layout_marginEnd="27dp"

                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView29"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mulish_semibold"
                    android:text="@string/caller_information"
                    android:textColor="#F7F7FC"
                    android:textSize="14sp"
                    app:circularflow_radiusInDP="5dp" />

                <TextView
                    android:id="@+id/textView37"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mulish"
                    android:text="Change caller information"
                    android:textColor="#F7F7FC"
                    android:textSize="12sp" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout17"
            android:layout_width="321dp"
            android:layout_height="66dp"
            android:background="@drawable/bg_new"
            android:layout_marginStart="51dp"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="39dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout15">

            <ImageView
                android:id="@+id/imageView31"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/a_setting" />

            <LinearLayout
                android:layout_width="206dp"
                android:layout_height="40dp"
                android:layout_marginStart="18dp"

                android:layout_marginEnd="44dp"

                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView31"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView51"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mulish_semibold"
                    android:text="@string/advance_settings"
                    android:textColor="#F7F7FC"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textView49"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mulish"
                    android:text="Ringtone,Call screen and etc"
                    android:textColor="#F7F7FC"
                    android:textSize="12sp" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout16"
            android:layout_width="321dp"
            android:layout_height="66dp"
            android:layout_marginStart="51dp"
            android:background="@drawable/bg_new"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="39dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout17">

            <ImageView
                android:id="@+id/imageView32"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/call_history" />

            <LinearLayout
                android:layout_width="180dp"
                android:layout_height="40dp"
                android:layout_marginStart="18dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="70dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView32"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/btn2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mulish_semibold"
                    android:text="@string/call_history"
                    android:textColor="#F7F7FC"
                    android:textSize="14sp"
                    app:circularflow_radiusInDP="5dp" />

                <TextView
                    android:id="@+id/textView50"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mulish"
                    android:text="Tap to view call history"
                    android:textColor="#F7F7FC"
                    android:textSize="12sp" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout1"
            android:layout_width="321dp"
            android:layout_height="66dp"
            android:layout_marginStart="51dp"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="39dp"
            android:background="@drawable/bg_new"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout16">

            <ImageView
                android:id="@+id/imageView33"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/scall_icon" />

            <LinearLayout
                android:layout_width="177dp"
                android:layout_height="40dp"
                android:layout_marginStart="19dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView33"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tvsc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mulish_semibold"
                    android:text="Schedule Call"
                    android:textColor="#F7F7FC"
                    android:textSize="14sp"
                    app:circularflow_radiusInDP="5dp" />

                <TextView
                    android:id="@+id/textView52"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mulish"
                    android:text="Tap to set time for fake call"
                    android:textColor="#F7F7FC"
                    android:textSize="12sp"
                    tools:layout_editor_absoluteX="84dp"
                    tools:layout_editor_absoluteY="10dp" />
            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Call now"
            android:backgroundTint="@color/textcolor"
            android:textColor="#FBFBFB"
            android:onClick="Call_now"
            app:layout_constraintBottom_toTopOf="@+id/coordinatorLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout1" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/background"
        app:headerLayout="@layout/navheader"
        app:itemIconTint="@color/textcolor"
        app:itemTextAppearance="@style/BottomNavigationViewTextStyle"
        app:itemTextColor="#FBFBFB"

        app:menu="@menu/navigation_menu">

    </com.google.android.material.navigation.NavigationView>




</androidx.drawerlayout.widget.DrawerLayout>